test/files/neg/bug649.scala
object test {
  def foo[A] = 0
  def foo[A] = foo[A]
}
