test/files/neg/bug649.check
bug649.scala:3: error: method foo is defined twice
  def foo[A] = foo[A]
  ^
one error found
